--- a/client/profile/index.html
+++ b/client/profile/index.html
@@ -32,6 +32,51 @@
 
 <body>
     <v-app id="app">
+
+        <ul class="ul-parent2">
+            <h1 style="margin-top: 40px; font-size: 50px; font-weight: bold; font-family: 'Bebas Neue';">Following</h1>
+            <h4 style="font-size: 19px; font-weight: bold; font-family: 'Bebas Neue';">Num:{{lenFollowing}}</h4>
+            <v-divider style="width: 80%; margin-top: 15px;"></v-divider>
+            <div  v-if="perfil != null" class="scrollable-comments">
+            <li style="margin-top: 20px; width: 100%; display: flex; flex-direction: row;" v-for="perfil in followingList">
+                <v-avatar style="height: 30px; width: 30px;" class="avatar">
+                    <img :src="perfil.user_img"  referrerpolicy="no-referrer"></v-img>
+                </v-avatar>
+                 <div style="margin-top: 15px;"><b>{{perfil.username}}</b>
+            </li>
+            </div>
+            <div v-if="perfil == null" style="position: absolute; bottom: 1%; width: 80%;" class="add-comment">
+                <v-divider style="width: 100%; margin-bottom: 15px; "></v-divider>
+                <h4  style="text-align: center;font-size: 21px; font-weight: bold; color: #999999; font-family: 'Bebas Neue'; ">
+                    <a style="color: black !important; text-decoration: none;"href="http://localhost:4000/sign/">Sign in</a> or 
+                    <a style="color: black !important; text-decoration: none;"href="http://localhost:4000/register/">Sign up</a> <br> to view users
+                </h4>
+
+            </div>
+        </ul>
+
+
+        <ul class="ul-parent3">
+            <h1 style="margin-top: 40px; font-size: 50px; font-weight: bold; font-family: 'Bebas Neue';">Followers</h1>
+            <h4 style="font-size: 19px; font-weight: bold; font-family: 'Bebas Neue';">Num:{{lenFollowers}}</h4>
+            <v-divider style="width: 80%; margin-top: 15px;"></v-divider>
+            <div  v-if="perfil != null" class="scrollable-comments">
+            <li style="margin-top: 20px; width: 100%; display: flex; flex-direction: row;" v-for="perfil in followersList">
+                <v-avatar style="height: 30px; width: 30px;" class="avatar">
+                    <img :src="perfil.user_img"  referrerpolicy="no-referrer"></v-img>
+                </v-avatar>
+                 <div style="margin-top: 15px;"><b>{{perfil.username}}</b>
+            </li>
+            </div>
+            <div v-if="perfil == null" style="position: absolute; bottom: 1%; width: 80%;" class="add-comment">
+                <v-divider style="width: 100%; margin-bottom: 15px;"></v-divider>
+                <h4  style="text-align: center;font-size: 21px; font-weight: bold; color: #999999; font-family: 'Bebas Neue'; ">
+                    <a style="color: black !important; text-decoration: none;"href="http://localhost:4000/sign/">Sign in</a> or 
+                    <a style="color: black !important; text-decoration: none;"href="http://localhost:4000/register/">Sign up</a> <br> to view users
+                </h4>
+
+            </div>
+        </ul>
         <div style="height: 100vh; width: 100%;">
             <v-container fluid class="container-flex" style="flex-direction: column; flex-wrap: unset; align-items: unset;" fill-height dense>
                 <button style="margin-left: 10px; position: absolute;" @click="goBack()"><v-icon class="left-arrow" style="font-size: 45px;">mdi-arrow-left</v-icon></button>
@@ -52,8 +97,9 @@
                             {{perfil.nombre}} {{perfil.apellidos}}
                         </div>
                         <div style="display: flex; justify-content: center; align-items: center; margin-top: 30px; ">
-                            <v-btn style="margin: 0 100px; box-shadow: none !important; padding: 0 45px;">FOLLOW</v-btn>
-                            <v-btn style="margin: 0 100px; box-shadow: none !important; ">SEND MESSAGE</v-btn>
+                            <v-btn v-if="following == 0" @click="follow()" style="margin: 0 100px; box-shadow: none !important; padding: 0 45px;">FOLLOW</v-btn>
+                            <v-btn v-if="following == 1"  @click="deleteFollow()" style="margin: 0 100px; box-shadow: none !important; padding: 0 45px; color: white; background-color: #263238;">FOLLOWING</v-btn>
+
                         </div>
 
                     </v-col>
@@ -64,7 +110,7 @@
                         <v-col cols="6" offset-sm-3>
                             <div
                                 style="display: flex; justify-content: center; align-items: center; height: 100%; flex-direction: column; width: 100%;">
-                                <div style="font-weight: bold; font-family: 'Bebas Neue'; font-size: 3em;">
+                                <div id="followers-toggle" style="width: 150px; cursor: pointer; text-align:center; font-weight: bold; font-family: 'Bebas Neue'; font-size: 3em;">
                                     {{lenFollowers}}</div>
                                 <h2 style="font-weight: bold; font-family: 'Bebas Neue';font-size: 1.4em;">Followers
 
@@ -74,7 +120,7 @@
                         <v-col cols="6" offset-sm-3>
                             <div
                                 style="display: flex; justify-content: center; align-items: center; height: 100%; flex-direction: column; width: 100%;">
-                                <div style="font-weight: bold; font-family: 'Bebas Neue'; font-size: 3em;">
+                                <div id="following-toggle" style="cursor: pointer; width: 150px; text-align:center; font-weight: bold; font-family: 'Bebas Neue'; font-size: 3em;">
                                     {{lenFollowing}}</div>
                                 <h2 style="font-weight: bold; font-family: 'Bebas Neue'; font-size: 1.4em;">Following
                                 </h2>
