--- a/client/publi/index.html
+++ b/client/publi/index.html
@@ -45,7 +45,7 @@
                 <v-avatar style="height: 30px; width: 30px;" class="avatar">
                     <img :src="comentari.user_img"  referrerpolicy="no-referrer"></v-img>
                 </v-avatar>
-                 <div><b>{{comentari.user}}</b>:</div> <div> {{comentari.coment_text}}</div>
+                 <div><b>{{comentari.username}}</b>:</div> <div> {{comentari.coment_text}}</div>
             </li>
         </div>
             <div  v-if="perfil != null" style="position: absolute; bottom: 1%; width: 80%;" class="add-comment">
@@ -101,12 +101,12 @@
                             min-width: 48px;
                             width: 48px;
                         " class="avatar">
-                                <img :src="publicacion.user_img"  referrerpolicy="no-referrer"></v-img>
+                                <img :src="publi_user_img"  referrerpolicy="no-referrer"></v-img>
                             </v-avatar>
                             <div style="    display: flex;
                             align-items: center;
                             width: 13%; 
-                            justify-content: center;" class="name-header"><a  style="color: black; text-decoration: none;" @click="showPerfil(publicacion.owner)">{{publicacion.owner}}</a></div>
+                            justify-content: center;" class="name-header"><a  style="color: black; text-decoration: none;" @click="showPerfil(publi_user_username)">{{publi_user_username}}</a></div>
                             <div style="    display: flex; margin-top: 0px;
                             align-items: center;
                             width: 100%;
