--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -33,10 +33,22 @@
             <div class="img-logo" style="width: 100%; text-align: right;"><img class="img-logo-img"
                     src="/signup/logo_app_claro.png" alt=""></div>
             <v-row justify="start" align-items="start">
+                <v-dialog  v-model="infoDialog" v-if="infoDialog == true" width="400"  :retain-focus="false">
+                    <v-card style=" background: #3b3b3b7a; cursor: default; display: flex; height: 300px; padding: 40px 40px; align-items: center; flex-direction: column; justify-content: center;">
+                        <div style="font-family: 'Bebas Neue'; color: white; font-weight: bold; font-size: 2.5em;">Code</div>
+
+                            <div>
+                                <v-otp-input v-model="otp"
+                            length="5"
+                            ></v-otp-input>
+                            </div>
+                            <v-btn @click="verify(), infoDialog = false" >Verify</v-btn>
+                    </v-card>
+                </v-dialog>
                 <div class="col-before" style="width: 60%;">
                     <v-card-text>
                         <v-card-title
-                            style="margin-top: 30px; font-size: 3rem;  text-align: center; font-weight: bold; color: #575454; font-family: 'Bebas Neue'; ">
+                            style="margin-top: 30px; font-size: 2.8rem;  text-align: center; font-weight: bold; color: #575454; font-family: 'Bebas Neue'; ">
                             WELCOME TO TENARSE</v-card-title>
                         <v-text-field id="name" v-model="name" color="#575454" style="margin-top: 0px;" outlined
                             label="Name" append-icon="mdi-account">
@@ -44,12 +56,15 @@
                         <v-text-field id="surname" v-model="surname" color="#575454" style="margin-top: 0px;" outlined
                         label="Surname" append-icon="mdi-account">
                         </v-text-field>
-                        <v-text-field id="surname" v-model="username" color="#575454" style="margin-top: 0px;" outlined
+                        <v-text-field id="username" v-model="username" color="#575454" style="margin-top: 0px;" outlined
                         label="Username" append-icon="mdi-account-circle">
                         </v-text-field>
+
                         <v-text-field id="email" v-model="email" color="#575454" style="margin-top: 0px;" outlined
                         label="Email" append-icon="mdi-email">
                          </v-text-field>
+                         <p v-if="error_username" style="color: red; ">Email or username in use</p>
+
                         <v-text-field  id="pass" v-model="pass" outlined color ="#575454"
                         :type="showPassword ? 'text' : 'password'" label="Password"
                         :append-icon="showPassword ? 'mdi-eye' : 'mdi-eye-off'"
@@ -60,7 +75,12 @@
                         :append-icon="showPassword ? 'mdi-eye' : 'mdi-eye-off'"
                         @click:append="showPassword = !showPassword">
                         </v-text-field>
-                        <button @click="register(name, surname, username, email, pass, confirm_pass)" class="btn-sign" style="width: 100%; height: 50px; border: 1px solid grey;">
+                        <p v-if="pass != confirm_pass" style="color: red; ">Passwords not matching</p>
+                        <v-btn @click="infoDialog=true, sendCode(name, surname, username, email, pass, confirm_pass)">as</v-btn>
+                        <button v-if="pass == confirm_pass" @click="register(name, surname, username, email, pass, confirm_pass)" class="btn-sign" style=" width: 100%; height: 50px; border: 1px solid grey;">
+                            <span style="font-weight: 500; font-size: 17px;">Sign Up</span>
+                        </button>
+                        <button v-if="pass != confirm_pass" disabled class="btn-sign" style=" opacity: 0.5; width: 100%; height: 50px; border: 1px solid grey;">
                             <span style="font-weight: 500; font-size: 17px;">Sign Up</span>
                         </button>
                         <br><br>
