--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -42,7 +42,7 @@
                             length="5"
                             ></v-otp-input>
                             </div>
-                            <v-btn @click="verify(), infoDialog = false" >Verify</v-btn>
+                            <v-btn @click="verify(name, surname, username, email, pass), infoDialog = false" >Verify</v-btn>
                     </v-card>
                 </v-dialog>
                 <div class="col-before" style="width: 60%;">
